# devinci

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
ai/: config.py
ai/agents/: hub.py  voice_agent.py
desktop/: app.py  crew_agent.py  dot_widget.py  pipeline.py  pipeline_server.py
electron/: index.html  package-lock.json  package.json
electron/electron/: main.cjs  preload.cjs
electron/src/: App.css  App.tsx
