[project]
name = "devinci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.7",
    "fastapi>=0.138.0",
    "fastmcp>=3.4.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.2",
    "livekit-agents[anthropic,openai,silero]>=0.12.0",
    "pyqt6>=6.7.0",
    "websockets>=15.0.1",
]
